src/components/markdown/partial-styles/_body-text.scss
:host(limel-markdown.truncate-paragraphs) {
    // This is not a public feature.
    // We use it only in CRM, in limebb-feed header.
    p {
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
    }
}

p,
a,
li {
    font-size: 0.875rem;
}

p {
    margin-top: 0;
    margin-bottom: 0.5rem;

    &:only-child {
        margin-bottom: 0;
    }
}

a {
    transition: color 0.2s ease;
    color: var(--markdown-hyperlink-color, rgb(var(--color-blue-dark)));
    text-decoration: none;

    &:hover {
        color: var(
            --markdown-hyperlink-color--hovered,
            rgb(var(--color-blue-default))
        );
    }
}

hr {
    margin: 1.75rem 0 2rem 0;
    border-width: 0;
    border-top: 1px solid rgb(var(--contrast-500));
}

